fixed overflow-x created by the footer

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,6 +2,9 @@
 
 body {
   font-family: Montserrat, sans-serif;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
